--- a/Project Gizmo/Gizmo V1_02/wwwroot/css/Custom/OR_Nav.css
+++ b/Project Gizmo/Gizmo V1_02/wwwroot/css/Custom/OR_Nav.css
@@ -481,6 +481,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    min-width: 0;
+    flex-shrink: 0;
 }
 
 .grid-can-edit .btn-ellipses {
